2020-06-01  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Various: Connect to the "focus-{in,out}" signals of a
	GtkEventControllerKey instead of the "focus-{in,out}-event" widget
	signals.

	This is preparation for GTK4, but will still need to be changed
	to use GtkEventControllerFocus in that distant future.

	* src/balsa-message.c (bm_header_tl_buttons), (balsa_message_init):
	* src/balsa-mime-widget-message.c (bm_header_widget_new):
	* src/balsa-mime-widget.c (balsa_mime_widget_new):
	* src/balsa-mime-widget-callbacks.c
	  (balsa_mime_widget_limit_focus),
	  (balsa_mime_widget_unlimit_focus): new signature;
	* src/balsa-mime-widget-callbacks.h: ditto.

2020-06-01  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Various: Connect to the "key-pressed" signal of a
	GtkEventControllerKey instead of the "key-press-event" widget
	signal.

	* src/balsa-message.c (bm_header_tl_buttons), (balsa_message_init):
	* src/balsa-mime-widget-message.c (bm_header_widget_new):
	* src/balsa-mime-widget-text.c (balsa_mime_widget_new_text),
	  (bm_widget_new_html):
	* src/balsa-mime-widget-callbacks.c
	  (balsa_mime_widget_key_pressed): rename and new signature;
	* src/balsa-mime-widget-callbacks.h: ditto.

2020-06-01  Peter Bloomfield  <pbloomfield@bellsouth.net>

	balsa-mblist: Connect to the "pressed" signal of a
	GtkGestureMultiPress instead of the "button-press-event" widget
	signal.

	* src/balsa-mblist.c (bmbl_gesture_pressed_cb), (bmbl_do_popup),
	(balsa_mblist_default_signal_bindings):

2020-05-31  Peter Bloomfield  <pbloomfield@bellsouth.net>

	balsa-index: Connect to the "pressed" signal of a
	GtkGestureMultiPress instead of the "button-press-event" widget
	signal.

	* src/balsa-index.c (balsa_index_init), (bndx_gesture_pressed_cb),
	(bndx_do_popup):

2020-05-31  Peter Bloomfield  <pbloomfield@bellsouth.net>

	ab-main: Connect to the "key-pressed" signal of a
	GtkEventControllerKey instead of the "key-press-event" widget
	signal.
